--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -79,99 +80,238 @@
                 </div>
             </div>
             <div class="event-contents">
-                <!-- MÙA XUÂN -->
                 <div class="event-info" id="spring">
                     <div class="event-detail" data-index="0">
-                        <h4>🌸 Xuân: Lễ hội khai xuân</h4>
-                        <p>📅 01/01/2025</p>
-                        <p>📍 Công viên Thương Bạc</p>
+                        <div class="event-detail-child">
+                            <h4>🌸 Xuân: Lễ hội khai xuân</h4>
+                            <p>📅 01/01/2025</p>
+                            <p>📍 Công viên Thương Bạc</p>
+                        </div>
+                        <div class="event-detail-child">
+                            <h4>🌸 Xuân: Đêm văn nghệ mừng xuân</h4>
+                            <p>📅 03/01/2025</p>
+                            <p>📍 Nhà hát Trưng Vương</p>
+                        </div>
+                        <div class="event-detail-child">
+                            <h4>🌸 Xuân: Chợ hoa ngày Tết</h4>
+                            <p>📅 07/01/2025</p>
+                            <p>📍 Công viên Lý Tự Trọng</p>
+                        </div>
                     </div>
                     <div class="event-detail" data-index="1" style="display: none;">
-                        <h4>Hội hoa xuân</h4>
-                        <p>📅 05/01/2025</p>
-                        <p>📍 Công viên Lê Lợi</p>
+                        <div class="event-detail-child">
+                            <h4>🌸 Xuân: Triển lãm thư pháp đầu năm</h4>
+                            <p>📅 10/01/2025</p>
+                            <p>📍 Trung tâm Văn hoá Huế</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🌸 Xuân: Lễ rước sắc thần làng cổ</h4>
+                            <p>📅 13/01/2025</p>
+                            <p>📍 Làng Bao Vinh</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🌸 Xuân: Hội thi làm bánh chưng – bánh tét</h4>
+                            <p>📅 17/01/2025</p>
+                            <p>📍 Nhà Văn hoá Thanh Niên Huế</p>
+                        </div>
                     </div>
                     <div class="event-detail" data-index="2" style="display: none;">
-                        <h4>Thi vẽ áo dài</h4>
-                        <p>📅 12/01/2025</p>
-                        <p>📍 Trường Quốc Học</p>
+                        <div class="event-detail-child">
+                            <h4>🌸 Xuân: Trình diễn áo dài truyền thống</h4>
+                            <p>📅 20/01/2025</p>
+                            <p>📍 Phố đi bộ Nguyễn Đình Chiểu</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🌸 Xuân: Lễ hội Đèn lồng & Thả hoa đăng</h4>
+                            <p>📅 25/01/2025</p>
+                            <p>📍 Bến thuyền Nghinh Lương Đình</p>
+                        </div>
                     </div>
                     <div class="event-detail" data-index="3" style="display: none;">
-                        <h4>Diễu hành văn hoá</h4>
-                        <p>📅 25/01/2025</p>
-                        <p>📍 Đường Lê Lợi</p>
+                        <div class="event-detail-child">
+                            <h4>Diễu hành văn hoá</h4>
+                            <p>📅 25/01/2025</p>
+                            <p>📍 Đường Lê Lợi</p>
+                        </div>
+
+
                     </div>
                 </div>
 
                 <!-- MÙA HẠ -->
                 <div class="event-info" id="summer" style="display:none;">
                     <div class="event-detail" data-index="0">
-                        <h4>☀️ Hạ: Lễ hội biển</h4>
-                        <p>📅 20/04/2025</p>
-                        <p>📍 Thuận An</p>
+                        <div class="event-detail-child">
+                            <h4>☀️ Hạ: Lễ hội biển</h4>
+                            <p>📅 20/04/2025</p>
+                            <p>📍 Thuận An</p>
+                        </div>
+                        <div class="event-detail-child">
+                            <h4>🔥 Hạ: Lễ hội pháo hoa bên sông Hương</h4>
+                            <p>📅 15/06/2025</p>
+                            <p>📍 Bờ sông Hương</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🔥 Hạ: Đêm nhạc Trịnh Công Sơn mùa hạ</h4>
+                            <p>📅 18/06/2025</p>
+                            <p>📍 Công viên Trịnh Công Sơn</p>
+                        </div>
                     </div>
                     <div class="event-detail" data-index="1" style="display:none;">
-                        <h4>Chợ quê ngày hội</h4>
-                        <p>📅 10/05/2025</p>
-                        <p>📍 Cầu ngói Thanh Toàn</p>
+
+                        <div class="event-detail-child">
+                            <h4>🔥 Hạ: Lễ hội Sen Huế</h4>
+                            <p>📅 21/06/2025</p>
+                            <p>📍 Hồ Tịnh Tâm</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🔥 Hạ: Triển lãm nghệ thuật ánh sáng</h4>
+                            <p>📅 25/06/2025</p>
+                            <p>📍 Trung tâm Văn hóa Huế</p>
+                        </div>
                     </div>
                     <div class="event-detail" data-index="2" style="display:none;">
-                        <h4>Đêm nhạc trẻ</h4>
-                        <p>📅 21/05/2025</p>
-                        <p>📍 Phu Văn Lâu</p>
+
+                        <div class="event-detail-child">
+                            <h4>🔥 Hạ: Cuộc thi múa lân - sư - rồng mùa hè</h4>
+                            <p>📅 28/06/2025</p>
+                            <p>📍 Sân vận động Tự Do</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🔥 Hạ: Festival Ẩm thực Đường phố</h4>
+                            <p>📅 30/06/2025</p>
+                            <p>📍 Phố đi bộ Nguyễn Huệ</p>
+                        </div>
                     </div>
                     <div class="event-detail" data-index="3" style="display:none;">
-                        <h4>Ẩm thực ba miền</h4>
-                        <p>📅 01/06/2025</p>
-                        <p>📍 Công viên Tứ Tượng</p>
+                        <div class="event-detail-child">
+                            <h4>🔥 Hạ: Hội trại Văn hoá tuổi trẻ</h4>
+                            <p>📅 04/07/2025</p>
+                            <p>📍 Công viên 3/2</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🔥 Hạ: Rước đèn truyền thống đêm Hạ chí</h4>
+                            <p>📅 07/07/2025</p>
+                            <p>📍 Làng Đèn Lư</p>
+                        </div>
                     </div>
                 </div>
-
-                <!-- MÙA THU -->
                 <div class="event-info" id="autumn" style="display:none;">
                     <div class="event-detail" data-index="0">
-                        <h4>🍁 Thu: Lễ hội trăng rằm</h4>
-                        <p>📅 20/08/2025</p>
-                        <p>📍 Trung tâm Huế</p>
+                        <div class="event-detail-child">
+                            <h4>🍁 Thu: Lễ hội Áo Dài truyền thống</h4>
+                            <p>📅 10/09/2025</p>
+                            <p>📍 Phố đi bộ Nguyễn Đình Chiểu</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🎭 Thu: Tuần lễ Sân khấu truyền thống</h4>
+                            <p>📅 13/09/2025</p>
+                            <p>📍 Nhà hát Duyệt Thị Đường</p>
+                        </div>
                     </div>
                     <div class="event-detail" data-index="1" style="display:none;">
-                        <h4>Hội đèn lồng</h4>
-                        <p>📅 10/09/2025</p>
-                        <p>📍 Sông Hương</p>
+                        <div class="event-detail-child">
+                            <h4>🍂 Thu: Hội chợ Văn hoá - Thủ công mỹ nghệ</h4>
+                            <p>📅 16/09/2025</p>
+                            <p>📍 Công viên Tứ Tượng</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🧣 Thu: Festival Trà & Thư pháp Huế</h4>
+                            <p>📅 19/09/2025</p>
+                            <p>📍 Không gian Văn hóa Trà – Thái Hòa</p>
+                        </div>
+
                     </div>
                     <div class="event-detail" data-index="2" style="display:none;">
-                        <h4>Chương trình văn nghệ học sinh</h4>
-                        <p>📅 15/09/2025</p>
-                        <p>📍 Nhà Thiếu nhi Huế</p>
+                        <div class="event-detail-child">
+                            <h4>🍁 Thu: Đêm nhạc Trịnh giữa mùa Thu</h4>
+                            <p>📅 22/09/2025</p>
+                            <p>📍 Công viên Trịnh Công Sơn</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🎨 Thu: Triển lãm tranh lụa cố đô</h4>
+                            <p>📅 25/09/2025</p>
+                            <p>📍 Bảo tàng Mỹ thuật Huế</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🏮 Thu: Lễ hội Trung Thu cổ truyền</h4>
+                            <p>📅 27/09/2025</p>
+                            <p>📍 Phố cổ Bao Vinh</p>
+                        </div>
                     </div>
                     <div class="event-detail" data-index="3" style="display:none;">
-                        <h4>Trưng bày đèn cổ</h4>
-                        <p>📅 28/09/2025</p>
-                        <p>📍 Bảo tàng Huế</p>
+                        <div class="event-detail-child">
+                            <h4>🍂 Thu: Đêm thơ ca giao mùa</h4>
+                            <p>📅 30/09/2025</p>
+                            <p>📍 Sân sau Quốc Học Huế</p>
+                        </div>
                     </div>
                 </div>
 
-                <!-- MÙA ĐÔNG -->
                 <div class="event-info" id="winter" style="display:none;">
                     <div class="event-detail" data-index="0">
-                        <h4>❄️ Đông: Festival âm nhạc mùa đông</h4>
-                        <p>📅 15/11/2025</p>
-                        <p>📍 Nhà hát Duyệt Thị Đường</p>
+                        <div class="event-detail-child">
+                            <h4>❄️ Đông: Đêm nhạc giao mùa</h4>
+                            <p>📅 05/12/2025</p>
+                            <p>📍 Nhà hát Trưng Vương</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🌌 Đông: Triển lãm ảnh “Huế vào đông”</h4>
+                            <p>📅 09/12/2025</p>
+                            <p>📍 Bảo tàng Văn hóa Huế</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🕯️ Đông: Đêm thơ - ánh sáng và ký ức</h4>
+                            <p>📅 13/12/2025</p>
+                            <p>📍 Không gian nghệ thuật Diệu Đế</p>
+                        </div>
                     </div>
                     <div class="event-detail" data-index="1" style="display:none;">
-                        <h4>Hội ánh sáng</h4>
-                        <p>📅 05/12/2025</p>
-                        <p>📍 Ngọ Môn</p>
+                        <div class="event-detail-child">
+                            <h4>🎼 Đông: Hòa nhạc cổ điển mùa đông</h4>
+                            <p>📅 17/12/2025</p>
+                            <p>📍 Học viện Âm nhạc Huế</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>☕ Đông: Lễ hội Cà phê ấm</h4>
+                            <p>📅 20/12/2025</p>
+                            <p>📍 Phố cà phê Nguyễn Công Trứ</p>
+                        </div>
                     </div>
                     <div class="event-detail" data-index="2" style="display:none;">
-                        <h4>Cuộc thi sáng tác ảnh mùa đông</h4>
-                        <p>📅 10/12/2025</p>
-                        <p>📍 Đại Nội</p>
+                        <div class="event-detail-child">
+                            <h4>⛄ Đông: Trình diễn áo ấm truyền thống</h4>
+                            <p>📅 23/12/2025</p>
+                            <p>📍 Sân trước Đại Nội</p>
+                        </div>
+
+                        <div class="event-detail-child">
+                            <h4>🎄 Đông: Lễ hội ánh sáng & Giáng sinh</h4>
+                            <p>📅 25/12/2025</p>
+                            <p>📍 Nhà thờ Phủ Cam</p>
+                        </div>
                     </div>
                     <div class="event-detail" data-index="3" style="display:none;">
-                        <h4>Đêm nhạc acoustic</h4>
-                        <p>📅 22/12/2025</p>
-                        <p>📍 Cafe Mộc</p>
+
+                        <div class="event-detail-child">
+                            <h4>🎉 Đông: Chào năm mới bên dòng Hương</h4>
+                            <p>📅 31/12/2025</p>
+                            <p>📍 Quảng trường Ngọ Môn</p>
+                        </div>
                     </div>
                 </div>
             </div>
