--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <i class="fas fa-info icon-info"></i>
                 <!-- <i class="fas fa-image icon-images"></i> -->
             </div>
-            
+
             <div class="map-info">
                 <div class="map-title">
                     <h2>Đại Nội Huế</h2>
@@ -149,24 +149,24 @@
                     <a href="https://www.tiktok.com/@huefestival"><i class="fab fa-tiktok"></i></a>
                     <a href=""><i class="fas fa-globe"></i></a>
                 </div>
-                <div class="fot-info">
-                    <h2>Trung tâm Bảo tồn Di tích Cố đô Huế</h2>
-                    <h3>Phòng Festival Huế, Tổ chức sự kiện và Truyền thông</h3>
-                    <div>
-                        <i class="fas fa-map-marker-alt"></i>
-                        <p>Địa chỉ: Tam Tòa, 33 Tống Duy Tân, phường Phú Xuân, thành phố Huế, Việt Nam</p>
-                    </div>
-                    <div>
-                        <i class="far fa-envelope"></i>
-                        <p>Email: huefestival.official@gmail.com - info@huefestival.com</p>
-                    </div>
-                    <div>
-                        <i class="fas fa-phone"></i>
-                        <p>Điện thoại: 0234 3511 419</p>
-                    </div>
-                </div>
             </div>
             <img src="./assets/img/Logo/result_logo-2.png" alt="" class="fot-logo">
+        </div>
+        <div class="fot-info container">
+            <h2>Trung tâm Bảo tồn Di tích Cố đô Huế</h2>
+            <h3>Phòng Festival Huế, Tổ chức sự kiện và Truyền thông</h3>
+            <div>
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Địa chỉ: Tam Tòa, 33 Tống Duy Tân, phường Phú Xuân, thành phố Huế, Việt Nam</p>
+            </div>
+            <div>
+                <i class="far fa-envelope"></i>
+                <p>Email: huefestival.official@gmail.com - info@huefestival.com</p>
+            </div>
+            <div>
+                <i class="fas fa-phone"></i>
+                <p>Điện thoại: 0234 3511 419</p>
+            </div>
         </div>
         <div class="fot-bottom">
             <p>© 2025 TRUNG TÂM BẢO TỒN DI TÍCH CỐ ĐÔ HUẾ - Số giấy phép: 233/GP - BTTTT cấp ngày 16/5/2008.</p>
