them taget + gom i va p o fot

--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
             <img src="./assets/img/Logo/logo-festival.png" alt="" class="fot-logo">
             <div class="fot-mid">
                 <div class="list-social">
-                    <a href="https://www.facebook.com/huefestival.official"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.youtube.com/@huefestivals"><i class="fab fa-youtube"></i></a>
-                    <a href="https://www.tiktok.com/@huefestival"><i class="fab fa-tiktok"></i></a>
-                    <a href=""><i class="fas fa-globe"></i></a>
+                    <a href="https://www.facebook.com/huefestival.official" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.youtube.com/@huefestivals" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.tiktok.com/@huefestival" target="_blank"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://huefestival.com/" target="_blank"><i class="fas fa-globe"></i></a>
                 </div>
             </div>
             <img src="./assets/img/Logo/result_logo-2.png" alt="" class="fot-logo">
@@ -156,16 +156,13 @@
             <h2>Trung tâm Bảo tồn Di tích Cố đô Huế</h2>
             <h3>Phòng Festival Huế, Tổ chức sự kiện và Truyền thông</h3>
             <div>
-                <i class="fas fa-map-marker-alt"></i>
-                <p>Địa chỉ: Tam Tòa, 33 Tống Duy Tân, phường Phú Xuân, thành phố Huế, Việt Nam</p>
+                <p><i class="fas fa-map-marker-alt"></i>Địa chỉ: Tam Tòa, 33 Tống Duy Tân, phường Phú Xuân, thành phố Huế, Việt Nam</p>
             </div>
             <div>
-                <i class="far fa-envelope"></i>
-                <p>Email: huefestival.official@gmail.com - info@huefestival.com</p>
+                <p><i class="far fa-envelope"></i>Email: huefestival.official@gmail.com - info@huefestival.com</p>
             </div>
             <div>
-                <i class="fas fa-phone"></i>
-                <p>Điện thoại: 0234 3511 419</p>
+                <p><i class="fas fa-phone"></i>Điện thoại: 0234 3511 419</p>
             </div>
         </div>
         <div class="fot-bottom">
