--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
         <div class="fot-info container">
             <h2>Trung tâm Bảo tồn Di tích Cố đô Huế</h2>
             <h3>Phòng Festival Huế, Tổ chức sự kiện và Truyền thông</h3>
-            <div>
+            <div class="fot-info-row">
                 <p><i class="fas fa-map-marker-alt"></i>Địa chỉ: Tam Tòa, 33 Tống Duy Tân, phường Phú Xuân, thành phố Huế, Việt Nam</p>
             </div>
-            <div>
+            <div class="fot-info-row">
                 <p><i class="far fa-envelope"></i>Email: huefestival.official@gmail.com - info@huefestival.com</p>
             </div>
-            <div>
+            <div class="fot-info-row">
                 <p><i class="fas fa-phone"></i>Điện thoại: 0234 3511 419</p>
             </div>
         </div>
