--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hue Festival 2025 – Bản đồ Du Lịch</title>
 
-    <link rel="stylesheet" href="./assets/css/base.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -386,7 +386,6 @@
     });
 </script>
 <script src="assets/js/script.js"></script>
-=======
 
     <!-- Địa điem du lịch -->
     <div class="dia-diem-du-lich ">
@@ -417,7 +416,7 @@
                 data-map-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3826.1548931774328!2d107.57659917583011!3d16.467692784271062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3141a133c94c1643%3A0x43fd52385dcfacbf!2zTmfhu40gTcO0bg!5e0!3m2!1svi!2s!4v1752400834073!5m2!1svi!2s">
                 <div class="card-anh">
                     <div class="card-overlay"><i class="fas fa-map-marker-alt"></i></div>
-                    <img src="./assets/img/Du-lich/hoang-thanh-hue.jpg" alt="">
+                    <img src="assets/img/Du-lich/hoang-thanh-hue.jpg" alt="">
                 </div>
                 <div class="card-tieude">
                     Đại Nội Huế
@@ -428,7 +427,7 @@
                 data-map-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3826.838917399373!2d107.5638565758294!3d16.433005384300508!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3141a4038bc6d6c7%3A0x5976327fac723a0e!2zTMSDbmcgVOG7sSDEkOG7qWM!5e0!3m2!1svi!2s!4v1752400992061!5m2!1svi!2s">
                 <div class="card-anh">
                     <div class="card-overlay"><i class="fas fa-map-marker-alt"></i></div>
-                    <img src="./assets/img/Du-lich/lang-Tu-Duc.jpg" alt="">
+                    <img src="assets/img/Du-lich/lang-Tu-Duc.jpg" alt="">
                 </div>
                 <div class="card-tieude">
                     Lăng vua Tự Đức
@@ -439,7 +438,7 @@
                 data-map-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3826.1737616949354!2d107.63797752695312!3d16.46673690000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3141a14f1efae4a5%3A0x978974d3deb080b0!2zQ-G6p3UgbmfDs2kgVGhhbmggVG_DoG4!5e0!3m2!1svi!2s!4v1752401129396!5m2!1svi!2s">
                 <div class="card-anh">
                     <div class="card-overlay"><i class="fas fa-map-marker-alt"></i></div>
-                    <img src="./assets/img/Du-lich/cau-ngoi-thanh-toan.jpg" alt="">
+                    <img src="assets/img/Du-lich/cau-ngoi-thanh-toan.jpg" alt="">
                 </div>
                 <div class="card-tieude">
                     Cầu ngói Thanh Toàn
@@ -450,7 +449,7 @@
                 data-map-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3828.234650119022!2d107.594358075828!3d16.36200488436072!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3141a34086f368d7%3A0xe2405d40f33c77bc!2sL%C4%83ng%20Gia%20Long!5e0!3m2!1svi!2s!4v1752401248965!5m2!1svi!2s">
                 <div class="card-anh">
                     <div class="card-overlay"><i class="fas fa-map-marker-alt"></i></div>
-                    <img src="./assets/img/Du-lich/lang-Gia-Long.png" alt="">
+                    <img src="assets/img/Du-lich/lang-Gia-Long.png" alt="">
                 </div>
                 <div class="card-tieude">
                     Lăng vua Gia Long
@@ -461,7 +460,7 @@
                 data-map-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3825.2661544293414!2d107.6008611758308!3d16.51265558423287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3141a1f643caf119%3A0x46345c42f19aa219!2zTmjDoCBsxrB1IG5p4buHbSBCw6FjIEjhu5Mg4bufIEzDoG5nIETGsMahbmcgTuG7lw!5e0!3m2!1svi!2s!4v1752401444290!5m2!1svi!2s">
                 <div class="card-anh">
                     <div class="card-overlay"><i class="fas fa-map-marker-alt"></i></div>
-                    <img src="./assets/img/Du-lich/làng-cổ-Phước-Tích.jpg" alt="">
+                    <img src="assets/img/Du-lich/làng-cổ-Phước-Tích.jpg" alt="">
                 </div>
                 <div class="card-tieude">
                     Làng cổ Phước Tích
@@ -471,7 +470,7 @@
                 data-map-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7654.52430393755!2d107.5771488443657!3d16.411507129017018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3141a38cff0d22a5%3A0xb154e063660761f2!2zxJHhu5NpIFRoacOqbiBBbg!5e0!3m2!1svi!2s!4v1752401500788!5m2!1svi!2s">
                 <div class="card-anh">
                     <div class="card-overlay"><i class="fas fa-map-marker-alt"></i></div>
-                    <img src="./assets/img/Du-lich/doi-thien-an.jpg" alt="">
+                    <img src="assets/img/Du-lich/doi-thien-an.jpg" alt="">
                 </div>
                 <div class="card-tieude">
                     Đồi Thiên An
@@ -481,7 +480,7 @@
                 data-map-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3826.126815078315!2d107.5860255757658!3d16.469115128607417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3141a10023cffeb1%3A0xd4e4de4f7ea75c85!2zQ-G6p3UgVHLGsOG7nW5nIFRp4buBbg!5e0!3m2!1svi!2s!4v1752401604613!5m2!1svi!2s">
                 <div class="card-anh">
                     <div class="card-overlay"><i class="fas fa-map-marker-alt"></i></div>
-                    <img src="./assets/img/Du-lich/cau-Trang-Tien.jpg" alt="">
+                    <img src="assets/img/Du-lich/cau-Trang-Tien.jpg" alt="">
                 </div>
                 <div class="card-tieude">
                     Cầu Tràng Tiền
@@ -491,7 +490,7 @@
                 data-map-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3826.4411934234045!2d107.54225817576557!3d16.453182929043628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3141a6972c6005d3%3A0xf7268b7a4cf579ba!2zQ2jDuWEgVGhpw6puIE3hu6U!5e0!3m2!1svi!2s!4v1752401640644!5m2!1svi!2s">
                 <div class="card-anh">
                     <div class="card-overlay"><i class="fas fa-map-marker-alt"></i></div>
-                    <img src="./assets/img/Du-lich/chua-thien-mu.jpg" alt="">
+                    <img src="assets/img/Du-lich/chua-thien-mu.jpg" alt="">
                 </div>
                 <div class="card-tieude">
                     Chùa Thiên Mụ
@@ -507,7 +506,7 @@
     <!-- Footer -->
     <footer>
         <div class="logo-and-social container">
-            <img src="./assets/img/Logo/logo-festival.png" alt="" class="fot-logo">
+            <img src="assets/img/Logo/logo-festival.png" alt="" class="fot-logo">
             <div class="fot-mid">
                 <div class="list-social">
                     <a href="https://www.facebook.com/huefestival.official"><i class="fab fa-facebook"></i></a>
@@ -532,7 +531,7 @@
                     </div>
                 </div>
             </div>
-            <img src="./assets/img/Logo/logo-2.png" alt="" class="fot-logo">
+            <img src="assets/img/Logo/logo-2.png" alt="" class="fot-logo">
         </div>
         <div class="fot-bottom">
             <p>© 2025 TRUNG TÂM BẢO TỒN DI TÍCH CỐ ĐÔ HUẾ - Số giấy phép: 233/GP - BTTTT cấp ngày 16/5/2008.</p>
@@ -725,7 +724,6 @@
             });
         });
     </script>
->>>>>>> Lalaboy
 </body>
 
 </html>
